<resources>
    <string name="app_name">Bloc One</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_bullhorn_fragment">Hello Bullhorn fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">placeholder</string>
    <string name="mission">Mission</string>
    <string name="sign_in_title">BLOC Sign-in</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me and get the BLOC app</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">BLOC App Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="campaigns">Campaigns</string>
    <string name="soapbox">SoapBox</string>
    <string name="bloc_frag_strongmoves">#StrongMoves</string>
    <string name="bloc_check_us_out">Check Us Out</string>
    <string name="bloc_members1516_desc">2014–2015 BLOC Members. Bridges Hall of Music. Pomona College</string>
    <string name="header_5corg_text">A Claremont Colleges Organization</string>
    <string name="header_whoarewe_text">Who Are We</string>
    <string name="worldcampus_text">The World Is Our Campus</string>
    <string name="header_brohood_text">Brotherhood. Community. Unity.</string>
    <string name="whoarewe_text">At its foundation, BLOC represents the formation of a community! In particular, the BLOC community is designed to be a locus for the support and promotion of the Black men at Pomona College. This community is active at Pomona College and is maintained by its members. These members include any and all men on campus actively in support of the unity, strength and voice of the marginalized men at the 5 C’s. The core values of the group have four direct points of impact: Social Unity, On-Campus Activism, Off-Campus Community Organization, and Academic Promotion. The first aspect of Social Unity represents the formation of the community through the induction of new members, the interactions at meetings, communication with alumni and presentation of BLOC produced events. On-Campus Activism reflects the ideology of the members of the organization in standing behind one another and behind the community of color at Pomona. Off-Campus Community Organization has been on going through collaborations with local high schools in the area and the specific community programs initiated by BLOC members. The last most important aspect of the core values, Academic Promotion, represents an emerging focus on the educational support and professional development of BLOC’s own members.These four points of emphasis focus the BLOC community towards a specific and achievable goal.</string>
    <string name="mission_text">BLOC is a crucial resource for self-identified marginalized—but in no way marginal—students. BLOC is a supportive extended family at the sometimes-alienating Claremont Colleges. BLOC is a tight-knit brotherhood; let this be most sacred. BLOC promotes academic achievement and celebrates members’ successes. The organization recognizes, takes on, and tries to mitigate hardship as exercises in collective compassion.\n\nBLOC members hone skills that will benefit them throughout their lives. Leadership opportunities prepare members for success in their chosen careers and, more importantly, as human beings. BLOC creates well-rounded programs and strives for excellence and quality in all its undertakings. Members, both individually and collectively, work toward the advancement of the campus community and broader communities. In doing so, BLOC contributes to the betterment of each member.\n\nBLOC harnesses its tight-knit brotherhood to collaborate with other people, groups, and communities. BLOC hopes to assess the local climate in order to gauge the needs of the underrepresented. BLOC fosters close partnerships within the 5C community to achieve common goals. By embarking on these endeavors together, BLOC seeks mediation, reconciliation, and understanding. Co-curricular activities can be as valuable as the classroom experience; hence, BLOC promotes involvement in all aspects of collegiate life.</string>
    <string name="chevron">chevron_down</string>
    <string name="menu_bullet">menu bullet</string>
    <string name="header_mission">Mission</string>
    <string name="header_constitution_text">The Bloc Constitution</string>
    <string name="article1_header">Article I - Name</string>
    <string name="article2_header">Article II - Mission</string>
    <string name="article3_header">Article III - Membership</string>
    <string name="article4_header">Article IV - The Executive Board of BLOC</string>
    <string name="article5_header">Article V - Elections</string>
    <string name="article6_header">Article VI - Meetings</string>
    <string name="article7_header">Article VII - BLOC Advisor</string>
    <string name="article8_header">Article VIII - Website</string>
    <string name="article9_header">Article IX - Anti-Discrimination Clause</string>
    <string name="article10_header">Article X - Amendments</string>
    <string name="article11_header">Article XI - Ratification</string>
    <string name="article1_text">The title of the organization is Building Leaders on Campus (BLOC).</string>
    <string name="article2_text">BLOC is a crucial resource for self-identified marginalized—but in no way marginal—students.  BLOC is a supportive extended family at the sometimes-alienating Claremont Colleges.  BLOC is a tight-knit brotherhood; let this be most sacred.  BLOC promotes academic achievement and celebrates members’ successes.  The organization recognizes, takes on, and tries to mitigate hardship as exercises in collective compassion.\n\nBLOC members hone skills that will benefit them throughout their lives.  Leadership opportunities prepare members for success in their chosen careers and, more importantly, as human beings.  BLOC creates well-rounded programs and strives for excellence and quality in all its undertakings.  Members, both individually and collectively, work toward the advancement of the campus community and broader communities.  In doing so, BLOC contributes to the betterment of each member.\n\nBLOC harnesses its tight-knit brotherhood to collaborate with other people, groups, and communities.  BLOC hopes to assess the local climate in order to gauge the needs of the underrepresented.  BLOC fosters close partnerships within the 5C community to achieve common goals.  By embarking on these endeavors together, BLOC seeks mediation, reconciliation, and understanding.  Co-curricular activities can be as valuable as the classroom experience; hence, BLOC promotes involvement in all aspects of collegiate life.</string>
    <string name="article3_text">Section III.01 - Admission\n\t\t1. BLOC actively seeks underrepresented students at the Claremont Colleges.\n\t\t2. BLOC determines membership at the end of the four-week initiation process at the beginning of each fall semester of classes at the Claremont Colleges.\n\nSection III.02 - Initiation - Incomplete\n\t\t1. Proposed\n\t\t\t\ta. Check out BLOC/Preview Period to allow drop-outs (maybe first 2 meetings after the very first meeting)\n\t\t\t\tb. Fall only or Fall &amp; Spring admission?\n\nSection III.03 - Requirements for Active Members\n\t\t1. Active members of BLOC are required to attend all meetings unless due to unforeseeable reasons (e.g. – academics, health, etc.).  Attendance will be taken at every meeting.\n\t\t2. BLOC membership must be brought into question and analyzed if more than fifty percent of meetings are unexcused absences for the given school year.\n\t\t3. Executive Board members review absences at the Executive Board meetings, determine individuals (including Executive Board members themselves) membership, and update the official membership list in the online member center.  The executive board will discuss these absences and provide support as needed for those in question.\n\t\t4. Executive Board members deliberate consequences over any BLOC member guilty of a Claremont College student violation or other serious offense.\n\t\t5. Active participation is necessary for membership.  This is defined as consistent involvement with event planning, hosting, tabling, mentoring, etc.\n\t\t6. Each member must pay dues each semester.\n\nSection III.04 - Entitlements\n\t\t1. Membership entitles each member to have a say in what BLOC does as an organization.\n\t\t2. Every active member must be aware of decisions made on behalf of BLOC; every active member is entitled to a vote before BLOC sponsors, puts its name on something, or publishes something as it reflects the views, opinions, and commitment of each member to be in some way involved with that decision as a member of BLOC.</string>
    <string name="user_account_image">User Account Image</string>
    <string name="user_name">Armand Gray</string>
    <string name="user_details">Bloc Member - BlocApp Creator</string>
    <string name="family_group_executiveboard">Bloc Brothers</string>
    <string name="bloc_member_image">Bloc Member Image</string>
    <string name="bloc_member_name">Member Name</string>
    <string name="family_group_supportstaff">Aunties &amp; Uncles</string>
    <string name="bloc_supportstaff_name">Maria Tucker</string>
    <string name="bloc_supportstaff_image">Bloc Support Staff Image</string>
    <string name="bloc_peoples_name">John Doe</string>
    <string name="bloc_peoples_image">Bloc Peoples Image</string>
    <string name="family_group_peoples">Peoples</string>
    <string name="bloc_campaigns_text">Select one of the current BLOC Campaigns below</string>
    <string name="bloc_campaigns_subtext">Scroll for more options</string>
    <string name="logo_negative">logo_negative</string>
    <string name="icon">icon</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="title">Title</string>
    <string name="admin">Admin</string>
    <string name="description">Description</string>
</resources>