<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bloc_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context="org.blocorganization.blocapp.bloc.HomeSubFragment">

    <ScrollView
        android:id="@+id/bloc_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bloc_chevron_down"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bloc_frag_main_logo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:contentDescription="@string/logo_negative"
                app:srcCompat="@drawable/logo_negative" />

            <TextView
                android:id="@+id/bloc_frag_strongmoves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bloc_frag_strongmoves"
                android:textSize="24sp" />

            <include
                layout="@layout/btn_layout_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="125dp" />

            <TextView
                android:id="@+id/header_brotherhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="#A6A6A6"
                android:gravity="center"
                android:paddingTop="75dp"
                android:text="@string/header_brohood_text"
                android:textColor="#000000"
                android:textSize="@dimen/headers_size" />

            <TextView
                android:id="@+id/text_worldcampus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#A6A6A6"
                android:gravity="center"
                android:paddingBottom="75dp"
                android:paddingTop="10dp"
                android:text="@string/worldcampus_text"
                android:textColor="#000000"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/header_5corg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="75dp"
                android:gravity="center"
                android:text="@string/header_5corg_text"
                android:textSize="@dimen/headers_size" />

            <ImageView
                android:id="@+id/bloc_members1516"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:contentDescription="@string/bloc_members1516_desc"
                app:srcCompat="@drawable/bloc_member1516" />

            <TextView
                android:id="@+id/header_whoarewe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:background="@color/textColor"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingTop="75dp"
                android:text="@string/header_whoarewe_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/headers_size" />

            <TextView
                android:id="@+id/text_whoarewe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/textColor"
                android:paddingBottom="75dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/whoarewe_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/bloc_chevron_down"
        android:layout_width="@dimen/bloc_chevron_side"
        android:layout_height="@dimen/bloc_chevron_side"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/chevron"
        app:srcCompat="@drawable/chevron_down" />


</RelativeLayout>
