<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.blocorganization.blocapp.bloc.FamilySubFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="Me"
        android:textColor="@color/blocFamilyGroups" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/user_account_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_gray"
            android:padding="12dp"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/user_account_image"
            app:srcCompat="@drawable/ic_ghost_white_48dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/contacts_text_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_details"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/family_groups_border"
        android:paddingBottom="@dimen/contacts_short_interpadding"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/contacts_long_interpadding"
        android:text="@string/family_group_executiveboard"
        android:textColor="@android:color/black" />

    <!-- Executive Board Members -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contacts_short_interpadding"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/contacts_short_interpadding">

        <ImageView
            android:id="@+id/bloc_member_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_gray"
            android:contentDescription="@string/bloc_member_image"
            app:srcCompat="@drawable/ic_ghost_white_48dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/contacts_text_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bloc_member_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bloc_member_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bloc_member_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_details"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/family_groups_border"
        android:paddingBottom="@dimen/contacts_short_interpadding"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/contacts_long_interpadding"
        android:text="@string/family_group_supportstaff"
        android:textColor="@android:color/black" />

    <!-- Bloc Support Staff -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contacts_short_interpadding"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/contacts_short_interpadding">

        <ImageView
            android:id="@+id/bloc_supportstaff_image"
            android:layout_width="40dp"
            android:background="@drawable/circle_gray"
            android:layout_height="40dp"
            android:contentDescription="@string/bloc_supportstaff_image"
            app:srcCompat="@drawable/ic_ghost_white_48dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/contacts_text_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bloc_supportstaff_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bloc_supportstaff_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bloc_supportstaff_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_details"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/family_groups_border"
        android:paddingBottom="@dimen/contacts_short_interpadding"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/contacts_long_interpadding"
        android:text="@string/family_group_peoples"
        android:textColor="@android:color/black" />

    <!-- Our Peoples -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contacts_short_interpadding"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/contacts_short_interpadding">

        <ImageView
            android:id="@+id/bloc_peoples_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_gray"
            android:padding="12dp"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/bloc_peoples_image"
            app:srcCompat="@drawable/ic_ghost_white_48dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/contacts_text_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bloc_peoples_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bloc_peoples_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bloc_peoples_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_details"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
