<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/containerType"
            layout="@layout/spinner_menu_layout" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/title"
            android:inputType="textShortMessage"
            android:paddingTop="30dp"
            android:textColor="@color/textColor"
            android:textColorHint="#999999"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_top_border_background"
            android:ems="15"
            android:hint="@string/admin"
            android:inputType="textShortMessage"
            android:paddingBottom="10dp"
            android:paddingTop="30dp"
            android:textColor="@color/textColor"
            android:textColorHint="#999999"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_top_border_background"
            android:ems="15"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:paddingBottom="10dp"
            android:paddingTop="30dp"
            android:textColor="@color/textColor"
            android:textColorHint="#999999"
            android:textSize="14sp" />

        <include layout="@layout/single_line_switch" />
    </LinearLayout>

</ScrollView>