<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bloc_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context="org.blocorganization.blocapp.campaigns.CampaignsSubFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/bloc_campaigns_text"
        android:textSize="@dimen/campaigns_header_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:text="@string/bloc_campaigns_subtext"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white" />

    <ScrollView
        android:id="@+id/bloc_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/white_dividers_background"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:paddingTop="@dimen/small_header_pad_top"
                android:paddingBottom="@dimen/small_header_pad_bottom"
                android:text="@string/campaigns"
                android:textAllCaps="true"
                android:textColor="@color/ToolBarColor"
                android:textSize="12sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvCampaigns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/campaigns_recycler_margin"
                android:layout_marginRight="@dimen/campaigns_recycler_margin"
                android:layout_marginTop="@dimen/campaigns_image_margin" />

            <include
                layout="@layout/btn_layout_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>